# mlibrary

./: .gitignore  CMakeLists.txt  README.md  SConstruct  TODO  changelog  compileCmesh  createMLibrary  doxygenREADME  frameworksREADME  installCadmesh  installCmesh  makeChangeLog.csh
cmake/: MLibraryConfig.cmake.in
detectorElement/: DetectorElement.cc  DetectorElement.h  Doxyfile  README.md  SConstruct  buildSolid.cc  changelog  detectorElement.cc  detectorElement.h  settings.xcconfig  utilities.cc
fields/: torusField.C
frequencySyncSignal/: SConscript  SConstruct  changelog  example.cc  frequencySyncSignal.cc  frequencySyncSignal.h  notes  settings.xcconfig  todo
g4display/: Doxyfile  README.md  SConscript  SConstruct  changelog  displayUI.cc  displayUI.h  example.cc  g4display.cc  g4display.h  notes  settings.xcconfig  utilities.cc
g4display/tabs/: gcamera.cc  gcamera.h  gslice.cc  gslice.h
g4volume/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  g4volume.cc  g4volume.h  notes  settings.xcconfig  utilities.cc  world.cc
g4volume/g4systemFactories/: checkDependencies.cc  g4SetupFactory.h  g4VolumeFactory.h  g4setupFactory.h  getG4Volumes.cc  registerFactory.cc
g4volume/g4systemFactories/cad/: g4CadSetupFactory.h  logical.cc  physical.cc  solid.cc
g4volume/g4systemFactories/native/: checkAndReturnParameters.cc  g4NativeSetupFactory.h  g4SolidConstructorDescription.cc  logical.cc  nativeVolumeFactory.h  physical.cc  solid.cc
gdata/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  gdata.cc  gdata.h  gdetectordata.h  settings.xcconfig  utilities.cc
gdata/observables/: gdetectorObservables.h  gobservables.cc  gobservables.h
gdynamic/: Doxyfile  README.md  SConscript  SConstruct  changelog  createSystemRoutine.py  ctofRoutinesExample.cc  ctofRoutinesExample.h  example.cc  gdynamic.h  settings.xcconfig  trueInfosHit.cc  trueInfosPulse.cc  trueObservable.cc
gfactory/: Doxyfile  README.md  SConstruct  changelog  g2.cc  gdl.h  gfactory.cc  gfactory.h  todo
gfactory/factoryExample/: Car.h  CarFactory.cc  CarFactory.h  DodgeFactory.cc  DodgeFactory.h  FordFactory.cc  FordFactory.h  ShapeFactory.cc  ShapeFactory.h  derived1.cc  derived1.h  derived2.cc  derived2.h  example.cc  firstFactory.cc  firstFactory.h  secondFactory.cc  secondFactory.h
gfields/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  gFieldManager.cc  gMap.cc  gMap.h  gMapCoordinates.cc  gMapCoordinates.h  gfield.cc  gfield.h  gfields.cc  gfields.h  notes  settings.xcconfig
ghit/: README.md  SConscript  SConstruct  buildHitInfos.cc  calculations.cc  changelog  example.cc  gHit.cc  gHit.h  ghit.cc  ghit.h  notes  settings.xcconfig
gmedia/: Doxyfile  README.md  SConscript  SConscriptDLL  SConscriptROOTDLL  SConscriptTXTDLL  SConstruct  changelog  example.cc  gmedia.cc  gmedia.h  notes  settings.xcconfig
gmedia/factories/root/: connection.cc  event.cc  gRootTree.cc  gRootTree.h  gmediaROOTFactory.cc  gmediaROOTFactory.h  publishDetectorDigiObservables.cc  publishDetectorTrueObservables.cc  publishHeader.cc
gmedia/factories/txt/: connection.cc  event.cc  gmediaTxtFactory.cc  gmediaTxtFactory.h  publishDetectorDigiObservables.cc  publishDetectorHits.cc  publishDetectorTrueInfosHits.cc  publishDetectorTrueObservables.cc  publishHeader.cc
gruns/: Doxyfile  README.md  SConscript  SConstruct  changelog  defineOptions.cc  example.cc  gruns.cc  gruns.h  notes  settings.xcconfig  todo
gstring/: SConscript  SConstruct  changelog  example.cc  gstring.cc  gstring.h  settings.xcconfig
gtouchable/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  gtouchable.cc  gtouchable.h  settings.xcconfig
gvolume/: Doxyfile  README.md  SConscript  SConstruct  changelog  ctof1__geometry_original.txt  example.cc  example.gcard  gMaterial.h  gSystem.cc  gSystem.h  gVolume.cc  gVolume.h  gsystem.cc  gsystem.h  gvolume.cc  gvolume.h  notes  settings.xcconfig  todo  utilities.cc
gvolume/systemFactories/: registerFactory.cc  systemDynamicFactory.h  systemFactory.h  systemTextFactory.cc  systemTextFactory.h
gvolume/systemFactories/cad/: gmaterial.cc  gvolume.cc  systemCadFactory.h
gvolume/systemFactories/gdml/: gvolume.cc  systemGDMLFactory.h
gvolume/systemFactories/text/: gMaterial.cc  gVolume.cc  gmaterial.cc  gvolume.cc  systemTextFactory.h
options/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  goptions.cc  goptions.h  options.cc  options.h  settings.xcconfig  todo
options/devel/: SConstruct  example.cc  old.cc  options.cc
options/doc/: Doxyfile
qtButtonsWidget/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  exampleResources.qrc  exampleResources.rcc  notes  qtButtonsWidget.cc  qtButtonsWidget.h  settings.xcconfig
splash/: Doxyfile  README.md  SConscript  SConstruct  changelog  example.cc  gsplash.cc  gsplash.h  notes  settings.xcconfig  todo
textProgressBar/: README.md  SConscript  SConstruct  changelog  example.cc  settings.xcconfig  textProgressBar.cc  textProgressBar.h
translationTable/: README.md  SConscript  SConstruct  changelog  example.cc  settings.xcconfig  todo  translationTable.cc  translationTable.h
